Updates from OHC Signed-off-by: Chris Jackson <chris@cd-jackson.com>
Allow property value to be updated to null (#1611)
Added further system information to rest resources (#1610)
Use TypeParser in ProfileCallbackImpl#sendUpdate for StringType state (#1603)
Added systeminfo rest resource (#1608)
Ensure that DSLScriptContextProvider is injected whenever
Use new Collection API methods (#1598)
Audio updates 1602/1604/1605
ported audio sinks from addons to core (#1597)
Add dark mode support in authorize page (#1600)
Fix various deprecations (#1595)
registered static methods as extensions (#1594)
fixed item links in rest api (#1591)
re-added log action to script scope and cleaned up imported extensions (#1590)
switched PersistenceExtensions to ZonedDateTime (#1588)
Use "openhab" event topic prefix (#1587)
Use "openhab" console scope (#1586)
reduced log levels of ExecUtil (#1584)