@@ -12,10 +12,13 @@
  */
 package org.openhab.core.audio.internal;
 
-import static org.hamcrest.CoreMatchers.*;
-import static org.junit.Assert.*;
+import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.CoreMatchers.nullValue;
+import static org.junit.Assert.assertThat;
+import static org.junit.Assert.fail;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 import java.io.File;
 import java.io.IOException;
@@ -23,6 +26,7 @@ import java.net.URI;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Locale;
+import java.util.Map;
 import java.util.function.BiFunction;
 
 import org.junit.After;
@@ -230,8 +234,7 @@ public class AudioManagerTest {
         audioManager.addAudioSource(audioSource);
 
         if (isSourceDefault) {
-            audioManager
-                    .modified(Collections.singletonMap(AudioManagerImpl.CONFIG_DEFAULT_SOURCE, audioSource.getId()));
+            audioManager.modified(Map.of(AudioManagerImpl.CONFIG_DEFAULT_SOURCE, audioSource.getId()));
         } else {
             // just to make sure there is no default source
             audioManager.modified(Collections.emptyMap());
@@ -249,10 +252,10 @@ public class AudioManagerTest {
         audioManager.addAudioSink(audioSink);
 
         if (isSinkDefault) {
-            audioManager.modified(Collections.singletonMap(AudioManagerImpl.CONFIG_DEFAULT_SINK, audioSink.getId()));
+            audioManager.modified(Map.of(AudioManagerImpl.CONFIG_DEFAULT_SINK, audioSink.getId()));
         } else {
             // just to make sure there is no default sink
-            audioManager.modified(Collections.emptyMap());
+            audioManager.modified(Map.of());
         }
 
         assertThat(String.format("The sink %s was not registered", audioSink.getId()), audioManager.getSink(),
