@@ -122,6 +122,6 @@ public class EnrichedConfigDescriptionDTOMapperTest {
         EnrichedConfigDescriptionParameterDTO ecdpdto = (EnrichedConfigDescriptionParameterDTO) cdpdto;
         assertThat(ecdpdto.defaultValues, is(notNullValue()));
         assertThat(ecdpdto.defaultValues, hasSize(3));
-        assertThat(ecdpdto.defaultValues, is(equalTo(Arrays.asList("first value", "second value", "third value"))));
+        assertThat(ecdpdto.defaultValues, is(equalTo(List.of("first value", "second value", "third value"))));
     }
 }
