@@ -16,6 +16,7 @@ import static org.openhab.core.magic.binding.MagicBindingConstants.THING_TYPE_CO
 
 import java.util.Collections;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -36,7 +37,7 @@ import org.osgi.service.component.annotations.Component;
 public class MagicDiscoveryService extends AbstractDiscoveryService {
 
     public MagicDiscoveryService() throws IllegalArgumentException {
-        super(Collections.singleton(THING_TYPE_CONFIG_THING), 0);
+        super(Set.of(THING_TYPE_CONFIG_THING), 0);
     }
 
     @Override
