@@ -43,10 +43,10 @@ import org.slf4j.LoggerFactory;
 public class HostFragmentSupportTest extends JavaOSGiTest {
 
     private static final Locale BULGARIAN = new Locale("bg");
-    private static final Locale DEFAULT = Locale.getDefault();
+    private static final Locale DEFAULT = Locale.ENGLISH;
     private static final Locale GERMAN = Locale.GERMANY;
 
-    private static final List<Locale> LOCALES = Arrays.asList(BULGARIAN, DEFAULT, GERMAN);
+    private static final List<Locale> LOCALES = List.of(BULGARIAN, DEFAULT, GERMAN);
 
     private final Logger logger = LoggerFactory.getLogger(HostFragmentSupportTest.class);
     private ModuleTypeRegistry registry;
