@@ -76,7 +76,7 @@ public class ScriptRuleOSGiTest extends JavaOSGiTest {
 
             @Override
             public Collection<Item> getAll() {
-                return Arrays.asList(new Item[] { new SwitchItem("MyTrigger"), new SwitchItem("ScriptItem") });
+                return List.of(new SwitchItem("MyTrigger"), new SwitchItem("ScriptItem"));
             }
 
             @Override
@@ -96,7 +96,7 @@ public class ScriptRuleOSGiTest extends JavaOSGiTest {
 
             @Override
             public Set<String> getSubscribedEventTypes() {
-                return Collections.singleton(ItemCommandEvent.TYPE);
+                return Set.of(ItemCommandEvent.TYPE);
             }
 
             @Override
