@@ -61,8 +61,7 @@ public class ConfigOptionRegistryOSGiTest extends JavaOSGiTest {
         when(configOptionsProviderMock.getParameterOptions(any(), any(), any(), any())).thenReturn(oList1);
 
         configDescriptionProviderMock = mock(ConfigDescriptionProvider.class);
-        when(configDescriptionProviderMock.getConfigDescriptions(any()))
-                .thenReturn(Collections.singleton(configDescription));
+        when(configDescriptionProviderMock.getConfigDescriptions(any())).thenReturn(Set.of(configDescription));
         when(configDescriptionProviderMock.getConfigDescription(any(), any())).thenReturn(configDescription);
     }
 
