@@ -78,8 +78,7 @@ public class ScriptEngineOSGiTest extends JavaOSGiTest {
 
             @Override
             public Collection<Item> getAll() {
-                return Arrays.asList(new SwitchItem(ITEM_NAME),
-                        createNumberItem(NUMBER_ITEM_TEMPERATURE, Temperature.class),
+                return List.of(new SwitchItem(ITEM_NAME), createNumberItem(NUMBER_ITEM_TEMPERATURE, Temperature.class),
                         createNumberItem(NUMBER_ITEM_LENGTH, Length.class), new NumberItem(NUMBER_ITEM_DECIMAL));
             }
 
