@@ -56,7 +56,7 @@ public class AbstractItemEventSubscriberOSGiTest extends JavaOSGiTest {
         eventPublisher = getService(EventPublisher.class);
         assertNotNull(eventPublisher);
 
-        when(itemProvider.getAll()).thenReturn(Collections.singletonList(new SwitchItem(ITEM_NAME)));
+        when(itemProvider.getAll()).thenReturn(List.of(new SwitchItem(ITEM_NAME)));
         registerService(itemProvider);
 
         EventSubscriber itemEventSubscriber = new AbstractItemEventSubscriber() {
@@ -72,8 +72,8 @@ public class AbstractItemEventSubscriberOSGiTest extends JavaOSGiTest {
         };
         registerService(itemEventSubscriber, EventSubscriber.class.getName());
 
-        when(mockMetadataProvider.getAll()).thenReturn(Collections
-                .singletonList(new Metadata(new MetadataKey("autoupdate", ITEM_NAME), Boolean.toString(false), null)));
+        when(mockMetadataProvider.getAll()).thenReturn(
+                List.of(new Metadata(new MetadataKey("autoupdate", ITEM_NAME), Boolean.toString(false), null)));
         registerService(mockMetadataProvider);
     }
 
@@ -122,7 +122,7 @@ public class AbstractItemEventSubscriberOSGiTest extends JavaOSGiTest {
 
             @Override
             public Set<String> getSupportedEventTypes() {
-                return Collections.singleton(someEventType);
+                return Set.of(someEventType);
             }
         };
         registerService(someEventFactory);
@@ -135,7 +135,7 @@ public class AbstractItemEventSubscriberOSGiTest extends JavaOSGiTest {
 
             @Override
             public String getTopic() {
-                return "smarthome/items";
+                return "openhab/items";
             }
 
             @Override
