@@ -110,8 +110,7 @@ public class FirmwareUpdateServicePrerequisiteVersionTest extends JavaOSGiTest {
 
     private FirmwareProvider createFirmwareProvider(Thing thing, Firmware... firmwares) {
         FirmwareProvider firmwareProvider = mock(FirmwareProvider.class);
-        when(firmwareProvider.getFirmwares(eq(thing), any(Locale.class)))
-                .thenReturn(new HashSet<>(Arrays.asList(firmwares)));
+        when(firmwareProvider.getFirmwares(eq(thing), any(Locale.class))).thenReturn(Set.of(firmwares));
         return firmwareProvider;
     }
 
